# rust-macro-app

./: Cargo.toml  README.md  keycodes.csv  keys.json  macros-rust-v2.txt  main.rs
marcos/: 1-2.json  1.json  2.json  3.json  5.json  backup macro data.txt  command.json  file-explorer.json  mouse.json  nca-test.json  nca.json  oracle.json  payroll-laptop.json  payroll-old.json  payroll.json  sqlplus.json  test.json  test2.json
src/: Log File 02-10-2025.txt  backup-mainrs.txt  keycodes.csv  keys.json  macros rust.txt  main.rs
src/marcos/: 1-2.json  1.json  2.json  3.json  4.json  5.json  backup macro data.txt  clipboard.json  command.json  elht-efin-app.json  excel-app.json  file-explorer.json  mouse-auto.json  mouse.json  nca-test.json  nca.json  notepad_test.json  open_two_explorer_windows.json  oracle.json  payroll-laptop.json  payroll-old.json  payroll.json  sqlplus.json  test.json  test2.json
src/marcos/marcos/: 1-2.json  1.json  1_new.json  2.json  3.json  4.json  5.json  backup pim.json  bco-efin-website.json  command.json  efin end marcro app.json  elht-efin-app.json  elht-test-macro.json  email.json  excel.json  file-explorer.json  j5.json  mouse-auto-2.json  mouse-auto.json  mouse.json  nca-test.json  nca.json  oracle.json  payroll-laptop.json  payroll-old.json  payroll.json  sqlplus.json  test-keys.json  test.json  test2.json
